--- a/css/style.css
+++ b/css/style.css
@@ -45,14 +45,14 @@ header{
     color: #ffe2b7;
 }
 /* 
-nav {
+nav{
     display: grid;
     grid-template-columns: max-content auto max-content;
-    /* grid-template-areas: "logo menus toggler"; 
-    grid-template-areas: auto;
-    justify-items: stretch;
-    align-items: stretch;
-} */
+    grid-template-areas: "logo menus toggler";
+    /* grid-template-areas: auto; */
+    /* justify-items: stretch; */
+    /* align-items: stretch; */
+/* } */
 
 .menu{
     display: grid;
@@ -151,3 +151,70 @@ a:hover, a:active, a:visited  {
     grid-row: 1/3;
     height: 100%;
 }
+
+
+/* From https://university.webflow.com  and  https://testsigma.com/blog/css-breakpoints/ 
+says common breakpoint for tablet is 768 px, so used 750px for wiggle room*/
+
+@media only screen and (min-width: 750px){
+    .skip:focus {
+        font-size: 200%;
+    }
+
+    .item{
+        display: flex;
+        flex-direction:row;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        gap: 10px;
+        justify-content: space-around;
+    }
+
+    .intro{
+        /* flex: 1; */
+        flex-basis: 30%;
+    }
+
+    .content{
+        /* flex: 2; */
+        flex-basis: 60%;
+    }
+
+    .gallery{
+        flex-basis: 60%;
+        order: 1;
+        align-self: end;
+    }
+
+    .outro{
+        flex-basis: 30%;
+        flex-wrap: wrap;
+    }
+
+    .sub_nav{
+        display: flex;
+        /* grid-template-columns: repeat(3, 1fr ); */
+        justify-content: space-around;
+        text-align: center;
+        margin: 0;
+        background-color: #373430;
+        color: #373430;
+      }
+    .sub_nav  div{
+        padding: 0.5em;
+        border: 4px solid #373430;
+        background-color: #ffffef;
+        border-radius: 0.6em;
+
+    }
+    .sub_nav a{
+        text-decoration: none;
+    }
+    .sub_nav a:link, .sub_nav a:visited  {
+        color: #373430;
+        font-size: 1.25em;
+    }
+}
+
+
+
